增加线程同步相关功能